# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
assets/: demo.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast
brain_games/: cli.py
brain_games/scripts/: brain_games.py  engine.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
